--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
   <div class="container">
-    <h1 class="text-center">Our Menu </h1>
+    
   </div>
 
 
@@ -20,7 +20,7 @@
     <div class="col col-lg-4 col-md-6 col-sm-12">
       <div class="container-main border">
 
-        <div id="bg-1" class="container-category float-right border">
+        <div id="bg-1" class="container-category">
           <h2 >Ckicken</h2>
         </div>
         <div class="container-context clear-both">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum facere perspiciatis minima ipsam vel excepturi omnis? Beatae ad quis quibusdam vel sequi rem reiciendis nemo consequuntur suscipit, tenetur pariatur minima!</div>
